add the new links for gitlab re-import

--- a/instructions.tex
+++ b/instructions.tex
@@ -21,14 +21,14 @@
 \renewcommand{\familydefault}{\sfdefault}
 
 \makeatletter
-\newcommand{\github}[1]{%
-   \href{#1}{GitHub \faGithubSquare}%
+\newcommand{\gitlab}[1]{%
+   \href{#1}{GitLab \faGitlab}%
 }
 \makeatother
 
 
 \usemintedstyle{vs}
-\author{Vincent Conus  -  Source availbe at \github{https://github.com/sunoc/ender-3_s1_pro_getting_started}}
+\author{Vincent Conus  -  Source availbe at \gitlab{https://gitlab.com/sunoc/ender-3_s1_pro_getting_started}}
 \date{}
 \title{Ender-3 S1 Pro: Getting Started Guide\\\medskip
 \large v.0.1 \\ \vspace{5mm}
