add figures and information about setting the printer in prusaslicer

--- a/instructions.tex
+++ b/instructions.tex
@@ -51,33 +51,33 @@
 % ==============================================================================
 \pagebreak
 \pagenumbering{arabic}  
-\section{Introduction}
-\label{sec:org82a736d}
-The \href{https://www.creality.com/products/creality-ender-3-s1-pro-fdm-3d-printer}{Ender-3 S1 Pro printer from Creality} is an additive manufacturing device capable of printing using various types of polymer
-materials.
+% \section{Introduction}
+% \label{sec:org82a736d}
+% The \href{https://www.creality.com/products/creality-ender-3-s1-pro-fdm-3d-printer}{Ender-3 S1 Pro printer from Creality} is an additive manufacturing device capable of printing using various types of polymer
+% materials.
 
-\subsection{Practice: Benchy}
-\label{sec:orgaa28782}
-Throughout this guide, the practical parts will be demonstrated using a model name "Benchy" in the 3D printing
-community.
+% \subsection{Practice: Benchy}
+% \label{sec:orgaa28782}
+% Throughout this guide, the practical parts will be demonstrated using a model name "Benchy" in the 3D printing
+% community.
 
-\begin{center}
-\includegraphics[width=.9\linewidth]{img/benchy.jpg}
-\end{center}
+% \begin{center}
+% \includegraphics[width=.9\linewidth]{img/benchy.jpg}
+% \end{center}
 
-This jolly boat has been used as a benchmark, stress test and calibration tool for printers for years. It has several
-points in it's favor:
-\begin{itemize}
-\item The small base allows to test bed adhesion
-\item The cabin part allows to test arches, bridges and small details
-\item The hull allows to test overhang and see printing smoothness defects
-\item The print is small and cute, and you want to make more of them!
+% This jolly boat has been used as a benchmark, stress test and calibration tool for printers for years. It has several
+% points in it's favor:
+% \begin{itemize}
+% \item The small base allows to test bed adhesion
+% \item The cabin part allows to test arches, bridges and small details
+% \item The hull allows to test overhang and see printing smoothness defects
+% \item The print is small and cute, and you want to make more of them!
 
-The STL file can be found in many places, but I suggest getting it from \href{https://www.thingiverse.com/thing:763622/files}{the Thingiverse page},
-where it can be downloaded without an account.
-Note that many files are available; but you should get the one named "3DBenchy.stl",
-since the other one are specials for multi-material printing.
-\end{itemize}
+% The STL file can be found in many places, but I suggest getting it from \href{https://www.thingiverse.com/thing:763622/files}{the Thingiverse page},
+% where it can be downloaded without an account.
+% Note that many files are available; but you should get the one named "3DBenchy.stl",
+% since the other one are specials for multi-material printing.
+% \end{itemize}
 
 % ==============================================================================
 \section{Slicing}
